// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Filters renders 1`] = `
<div
  className="navbar-nav mr-auto"
/>
`;

exports[`Filters renders filters 1`] = `
<div
  className="navbar-nav mr-auto"
>
  <Filter
    displayName="Foo"
    exact={true}
    id="foo"
    key="foo"
    pathname="/"
  />
  <Filter
    displayName="Bar"
    exact={false}
    id="bar"
    key="bar"
    pathname="/bar"
  />
</div>
`;

exports[`Filters renders with additional classes 1`] = `
<div
  className="foobar navbar-nav mr-auto"
/>
`;

exports[`Filters renders with additional props 1`] = `
<div
  className="navbar-nav mr-auto"
/>
`;
